# GraphCreator

./: .dockerignore  .gitignore  Dockerfile  README.md  all.json  lua_graph.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_test_manual.py
benchmarks/: datasets.py  plots.py  plots_repos.py  runner.py  runner_repos.py  test_benchmarks.py
benchmarks/results/: medium_cpu1_2026-05-04T11-42-01.json  medium_cpu2_2026-05-04T11-42-01.json  medium_cpu4_2026-05-04T11-42-01.json  small_cpu1_2026-05-04T11-41-39.json  small_cpu2_2026-05-04T11-41-39.json  small_cpu4_2026-05-04T11-41-39.json
docs/: benchmark_results.md  component_diagram.puml  component_diagram_overview.puml  component_diagram_pipeline.puml  cpg_schema_control_flow.puml  cpg_schema_data_flow.puml  cpg_schema_diagram.puml  cpg_schema_structure.puml  sequence_diagram.puml  sequence_diagram_cpg.puml  technical_documentation.md
manifests/: dapr-pubsub.yaml  deployment.yaml  keda-scaledobject.yaml  namespace.yaml  rabbitmq.yaml  raycluster.yaml  service.yaml
schema/v1/: cpg.edge.schema.json  cpg.export.schema.json  cpg.node.schema.json
schema/v2/: cpg.edge.schema.json  cpg.export.schema.json  cpg.node.schema.json
schema_lua/: cpg.edge.schema.json  cpg.export.schema.json
src/: __init__.py  ast_utils.py  csv_graph_exporter.py  dapr_handler.py  profiling.py  thought_process.txt
tests/: conftest.py  test_code_analyzer.py  test_dapr_integration.py  test_graph_builder.py  test_graph_collector_unit.py  test_lua_grammar.py  test_ray.py  test_symbol_table.py
(+77 files in other folders)
